<unreleased> Jim Winstead <jimw@mysql.com> (4.001)
* Make sure to handle "magical" values in a couple of places. (Bug #20104)
* Update the hints about what to do when zlib is found missing while
  linking. (Bug #13803, reported by Philip Stoev)
* Explicitly initialize the MySQL client library to avoid possible race
  conditions in a multithreaded application. (Bug #21792)
* Fix warning when no connection attributes are passed to the connect
  method (Bug #17323, reported by Phil Randal)
* Removed redundant warnings when commit or rollback is called while
  AutoCommit is enabled. [rt.cpan.org #15802], reported by Tyler MacDonald
* Report correct type for decimal columns from MySQL 5.0 and later
  [rt.cpan.org #18294], reported by Ray Zimmerman
* Fix t/40bindparam.t to work when ANSI_QUOTES SQL_MODE is set.
  [rt.cpan.org #21521], reported by David Wheeler
* Return a statement handle with an error when column_info is called on
  a table that does not exist. (Bug #23974, patch by Philip Stoev)
* Fix handling of table names with characters that did not match /\w/ in
  the column_info method. (Bug #22005, reported by Philip Stoev)
* Fix handling of negative integers bound to a column marked as SQL_INTEGER.
  [rt.cpan.org #18976], patch from Mike Schilli.
* Add support for the primary_key_info method. [rt.cpan.org #8541]
* Fixed Bundle::DBD::mysql to only include modules required for using
  DBD::mysql, not the old Mysql package. [rt.cpan.org #24096]
* Updated Makefile.PL to not include files in .svn directories

2006-12-22 Patrick Galbraith <patg@patg.net>, Alexey Stroganov (4.00)
* Added Alexey Stroganov's patch which fixes varying number of columns in 
  multiple result sets. Added new test cases to 80procs.t based of his
  test script (bug #21028) (Thanks Alexey!). Also fixed 80procs.t to allow
  'CALL' to be prepared
* Added Philip Stoev's patch for DATA_TYPE date and time columns (bug #23988)
  (Thanks Philip!) 